--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <nav class="navbar">
         <a href="#" class="logo">Portfolio</a>
         <ul>
-            <button onclick="window.location.href='index.html'">Go to Home</button>
+            <li><a href="index.html" target="_blank">Home</a></li>
             <li><a href="about.html" target="_blank">About</a></li>
             <li><a href="skills.html" target="_blank">Skills</a></li>
             <li><a href="achieve.html" target="_blank">Achievements</a></li>
